fixed some mis-alignement

--- a/eHotels/wwwroot/form.css
+++ b/eHotels/wwwroot/form.css
@@ -56,7 +56,6 @@
     margin-bottom: 0.5em;
 }
 
-
 .submit-button{
     border-width: 1px;
     border-color: rgb(113, 69, 116);
@@ -66,7 +65,7 @@
     color: white;
     font-weight: bold;
     font-size: larger;
-    padding:0.4em;
+    padding: 0.4em;
     transition: background-color 0.1s ease-in, transform 0.15s ease-in;
 }
 
@@ -88,7 +87,7 @@
     border-color: rgb(113, 69, 116);
     border-style: solid;
     border-radius: 0.5em;
-    padding-left: 5px;
+    box-sizing: border-box;
 }
 
 .form-container input:focus{
@@ -96,6 +95,7 @@
 }
 
 .form-container select{
+    width: 100%;
     height: 2.5em;
     border-radius: 0.5em;
     border-color: rgb(113, 69, 116);
